# des-example-analysis

./: .gitignore  .python-version  DESExample.mo  README.md  pyproject.toml
IDEAS_test/: Envelop.mo  Envelop_after.mo  ideas_updates.md
sdk_to_des_5G/: 2023-01-10 UO SDK and DES Demo Data.xlsx  process_results.ipynb
sdk_to_des_5G/baseline/: package.mo  power_60min.csv
sdk_to_des_5G/baseline/Districts/: DESExample.mo  package.mo
sdk_to_des_5G/baseline/Resources/: B11.mos  B2.mos  B6.mos
sdk_to_des_5G/high_efficiency/: package.mo  power_60min.csv
sdk_to_des_5G/high_efficiency/Districts/: DESExample.mo  package.mo  package.order
sdk_to_des_5G/sdk_energy_output/baseline/: building_11.json  building_2.json  building_6.json
sdk_to_des_5G/sdk_energy_output/high_eff/: building_11.json  building_2.json  building_6.json
sdk_to_des_gmt/baseline_demo/: package.mo
sdk_to_des_gmt/baseline_demo/Districts/: DistrictEnergySystem.mo  package.mo
sdk_to_des_gmt/baseline_demo/Loads/: package.mo
sdk_to_des_gmt/baseline_demo/Plants/: BoilerStage.mo  Boiler_TParallel.mo  CentralCoolingPlant.mo  CentralHeatingPlant.mo  ChilledWaterPumpSpeed.mo  ChillerStage.mo  CoolingTowerParallel.mo  CoolingTowerWithBypass.mo  HeatingWaterPumpSpeed.mo  PartialPlantParallel.mo  PartialPlantParallelInterface.mo  ValveParameters.mo  package.mo
sdk_to_des_gmt/high_eff_demo/: package.mo
sdk_to_des_gmt_4G/doe_small_demo/: package.mo
sdk_to_des_gmt_4G/doe_small_demo_high_eff/: package.mo
tes/: build_and_run.md  process_other_data.md  teaser_updates.md
tes/models/teaser/: ICT.mo  (+1 more)
(+220 files in other folders)
