[tool.poetry]
name = "sdk-and-des-modeling"
version = "0.1.0"
description = "Model development for TES"
authors = ["nllong <nicholas.long@nrel.gov>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
jupyterlab = "^3.0"
jupytext = "^1.13"

geojson-modelica-translator = { path = "../geojson-modelica-translator/", develop = true }
#geojson-modelica-translator = "^0.4.0"
#geojson-modelica-translator = { git = "https://github.com/urbanopt/geojson-modelica-translator.git", branch = "develop"}

# modelica-builder = {version = "^0.2.2", allow-prereleases = true }
modelica-builder = { path = "../modelica-builder/", develop = true }

buildingspy = "4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
